1페이지 수정/2페이지 제작

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         </ul>
       </nav> 
     </div>
+    <div class="title-box">
+      <div class="main-title">
+      Ready To Shape The Market’s Future.
+      </div>
+      <div class="main-logo-text">IL CELLION</div>
+    </div>
+    </section>
+    <section class="page-2">
+      <div class="page-2-img"><img src="imgs/imgi_1_main_content_img1.png" alt=""></div>
+      <div class="page-2-text">MOBILITY ONE-STOP<br> VALUE CHAIN</div>
     </section>
   </body>
   </html>
